add android studio 4.1 beta3 and 4.2 canary4 links

--- a/index.html
+++ b/index.html
@@ -313,6 +313,94 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 4 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.4/android-studio-ide-201.6636798-windows.exe">android-studio-ide-201.6636798-windows.exe</a>
+                                </td>
+                                <td>922275224 bytes</td>
+                                <td>a667dc8742383b6bfad3c450ba84172a6c6ab6ca58a82d79a4fa29ebbd721955</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1ggkpephxkzj30n00b83z2.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.4/android-studio-ide-201.6636798-windows.zip">android-studio-ide-201.6636798-windows.zip</a>
+                                </td>
+                                <td>936471544 bytes</td>
+                                <td>7a0e7b538c2adc6592d5b92cccc1c6412a4c6a130a4e5b8f7df52d5d124c6956</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.4/android-studio-ide-201.6636798-mac.zip">android-studio-ide-201.6636798-mac.zip</a>
+                                </td>
+                                <td>929570065 bytes</td>
+                                <td>15e2a980c0b94b8d57641b134bd70c2a856d18b8d6180ea665f2148c00547293</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.4/android-studio-ide-201.6636798-linux.tar.gz">android-studio-ide-201.6636798-linux.tar.gz</a>
+                                </td>
+                                <td>912951075 bytes</td>
+                                <td>6cf183b068043bd30d762f1f7f95bd4acf787b0e53c80f76fd4af459de4868ec</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.4/android-studio-ide-201.6636798-cros.deb">android-studio-ide-201.6636798-cros.deb</a>
+                                </td>
+                                <td>733510776 bytes</td>
+                                <td>b8d9ace1109f5c837336f440919dbb0a8abb81e7305003bba2c3cad62d396490</td>
+                            </tr>
+                            <!-- 4.1 Beta 3 -->
+                            <tr>
+                                <td rowspan="6">4.1 Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.13/android-studio-ide-201.6636797-windows.exe">android-studio-ide-201.6636797-windows.exe</a>
+                                </td>
+                                <td>953114264 bytes</td>
+                                <td>bfb0e3083aa77f27d1865977d074aa50ba7fb50c056188f255cf94862a20b0dc</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1ggkpatlignj30mo0b2aal.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.13/android-studio-ide-201.6636797-windows.zip">android-studio-ide-201.6636797-windows.zip</a>
+                                </td>
+                                <td>961113392 bytes</td>
+                                <td>e58f4065052309b78ff3d542130c8e71fc5d80ed4704d51e68ed02ef1a192718</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.13/android-studio-ide-201.6636797-mac.zip">android-studio-ide-201.6636797-mac.zip</a>
+                                </td>
+                                <td>937852683 bytes</td>
+                                <td>de30f95eef26fe4b340823bdf4ef73243d35285831750bdd2a68405c7b0ac262</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.13/android-studio-ide-201.6636797-linux.tar.gz">android-studio-ide-201.6636797-linux.tar.gz</a>
+                                </td>
+                                <td>938264971 bytes</td>
+                                <td>22a679c297b8e0e33182c90ff5962a051e6b6ac9eecadf7b5ab1f987634d44ae</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.13/android-studio-ide-201.6636797-cros.deb">android-studio-ide-201.6636797-cros.deb</a>
+                                </td>
+                                <td>786419900 bytes</td>
+                                <td>57540ed025b9caa7444e571d41dd9846d9d891b8e5ab5137059d877fe0a8c569</td>
+                            </tr>
                             <!-- 4.2 Canary 3 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 3</td>
