add android studio 4.1 beta4 links

--- a/index.html
+++ b/index.html
@@ -313,6 +313,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.1 Beta 4 -->
+                            <tr>
+                                <td rowspan="6">4.1 Beta 4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.14/fd6c78555c3e76a396d861ac5dd42ff3ce2ab4a0.android-studio-ide-201.6667167-windows.exe">android-studio-ide-201.6667167-windows.exe</a>
+                                </td>
+                                <td>951657808 bytes</td>
+                                <td>f32e5ba2062ca26b1dc0e7a5602f21d5ec448f7b7b8c66cccfb4925e84b7fa7e</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1ggu0io7xfdj30uk0auq5r.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.14/android-studio-ide-201.6667167-windows.zip">android-studio-ide-201.6667167-windows.zip</a>
+                                </td>
+                                <td>961112986 bytes</td>
+                                <td>b2c74440b452990cb3ed4e49b905379e59108475a55afa4081517df5e353f332</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.14/android-studio-ide-201.6667167-mac.zip">android-studio-ide-201.6667167-mac.zip</a>
+                                </td>
+                                <td>938091209 bytes</td>
+                                <td>4bc7ffe96826057dbfcbbb8dfe66968b54118fe7739109d2a3ff198c932a9008</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.14/android-studio-ide-201.6667167-linux.tar.gz">android-studio-ide-201.6667167-linux.tar.gz</a>
+                                </td>
+                                <td>938282061 bytes</td>
+                                <td>2089a4660f1c962c3a5615904f588652969f3a2b26324abe6706d1f617e39386</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.14/android-studio-ide-201.6667167-cros.deb">android-studio-ide-201.6667167-cros.deb</a>
+                                </td>
+                                <td>786436348 bytes</td>
+                                <td>686fc698183ac697cd847ceab5122b2a87ee775d959ff1b82697d5b94b64b2e1</td>
+                            </tr>
                             <!-- 4.0 正式版 -->
                             <tr>
                                 <td rowspan="7">4.0.1 正式版</td>
