add android studio 4.2 canary 5 links

--- a/index.html
+++ b/index.html
@@ -316,6 +316,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 5 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 5</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.5/fa6d4f583cfa6205c3c4de7926049257734e40d8.android-studio-ide-201.6682321-windows.exe">android-studio-ide-201.6682321-windows.exe</a>
+                                </td>
+                                <td>922262896 bytes</td>
+                                <td>d99beaa0e5d2cb24b1c4f3a6a7f6a8b9e18dd0729f731064d16f88718f98f24c</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1ggzmot4sovj30v50botbl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.5/android-studio-ide-201.6682321-windows.zip">android-studio-ide-201.6682321-windows.zip</a>
+                                </td>
+                                <td> bytes</td>
+                                <td>67be9af20a01b562e5fffe28838bc5d941130fa3264a6fcdb0489dd96b5c41d9</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.5/android-studio-ide-201.6682321-mac.zip">android-studio-ide-201.6682321-mac.zip</a>
+                                </td>
+                                <td>929140667 bytes</td>
+                                <td>643967384e9f7ff4d369cd6f9e8dfbb777fdb65c1ba08f5a8e717fb22412371f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.5/android-studio-ide-201.6682321-linux.tar.gz">android-studio-ide-201.6682321-linux.tar.gz</a>
+                                </td>
+                                <td>912542198 bytes</td>
+                                <td>30f3f16a1b138bb47ebbac931182ec445b1cee7bc69ea9b0661cc43a4f33d81c</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.5/android-studio-ide-201.6682321-cros.deb">android-studio-ide-201.6682321-cros.deb</a>
+                                </td>
+                                <td>733303428 bytes</td>
+                                <td>a5d7e0609c4bb881f95ab5c4a08da6082f1782e1e16df0f4453bf8003e040a89</td>
+                            </tr>
                             <!-- 4.1 Beta 4 -->
                             <tr>
                                 <td rowspan="6">4.1 Beta 4</td>
