add android studio 4.1 beta 5 links

--- a/index.html
+++ b/index.html
@@ -316,6 +316,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.1 Beta 5 -->
+                            <tr>
+                                <td rowspan="6">4.1 Beta 5</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.15/90bd622f165e82d24b0fea732bd930b31d6c4719.android-studio-ide-201.6692364-windows.exe">android-studio-ide-201.6692364-windows.exe</a>
+                                </td>
+                                <td>950721288 bytes</td>
+                                <td>787de6336869409ec29b011223571125da57ccdb264f7e733f2a0b1e98f6d5c0</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gh1suomjesj30uu0bcjs1.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.15/android-studio-ide-201.6692364-windows.zip">android-studio-ide-201.6692364-windows.zip</a>
+                                </td>
+                                <td>954879852 bytes</td>
+                                <td>cc6fcb8c68d11c2ed766fb9fdbe13a3ff7cbdb764ef1f501832d6619d3a7fb59</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.15/android-studio-ide-201.6692364-mac.zip">android-studio-ide-201.6692364-mac.zip</a>
+                                </td>
+                                <td>930163162 bytes</td>
+                                <td>11d1bed0a6d5673e8f6b7cea811e989f7603dc9d783bea48d91e1a5bbaf1955e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.15/android-studio-ide-201.6692364-linux.tar.gz">android-studio-ide-201.6692364-linux.tar.gz</a>
+                                </td>
+                                <td>936492423 bytes</td>
+                                <td>3820488d0a2fdaf5ca37aa793017899bd00b13f9b7c14ff509a75167be1ff699</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.15/android-studio-ide-201.6692364-cros.deb">android-studio-ide-201.6692364-cros.deb</a>
+                                </td>
+                                <td>785777324 bytes</td>
+                                <td>0b1e1fea443914e17b8b9da99533bc9f5ec96db0f677705f5224e4531aaf9551</td>
+                            </tr>
                             <!-- 4.2 Canary 5 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 5</td>
