optimize seo keywords

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AndroidDevTools - Android开发工具 Android SDK下载 Android Studio下载 Gradle下载 SDK Tools下载</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AndroidDevTools 是一个收集整理 Android 开发所需的 Android SDK、开发中用到的工具、Android 开发教程、Android 设计规范，免费的设计素材等的网站。">
-    <meta name="keyword" content="Android开发工具 ADT Bundle Android Studio AndroidStudio Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 SDK Tools下载">
+    <meta name="keyword" content="Android,Android开发,Android开发工具,Android开发,Android Studio,AndroidStudio,Android Studio下载,Android SDK,Android SDK下载,SDK下载,SDK Tools,Gradle,Gradle下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <meta name="referrer" content="no-referrer" />
     <link href="static/css/bootstrap-combined.min.css" rel="stylesheet">
