add android studio 4.2 canary 6 links

--- a/index.html
+++ b/index.html
@@ -316,6 +316,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 6 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 6</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.6/7caa66a3222fb3702a3fd01d973738df1fc8e45a.android-studio-ide-201.6712195-windows.exe">android-studio-ide-201.6712195-windows.exe</a>
+                                </td>
+                                <td>921930120 bytes</td>
+                                <td>378faac28a0acf695e9b8ed46c8de695ab97f121ab0f9fe26404264dd9c98e0a</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gh7nc8ffitj31r60n0gnv.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.6/android-studio-ide-201.6712195-windows.zip">android-studio-ide-201.6712195-windows.zip</a>
+                                </td>
+                                <td>935697574 bytes</td>
+                                <td>2b6398afa81e268719e71dcca0e91a02f1a8da64a4739cfe7d0724817e467a73</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.6/android-studio-ide-201.6712195-mac.zip">android-studio-ide-201.6712195-mac.zip</a>
+                                </td>
+                                <td>928808076 bytes</td>
+                                <td>b8a214e4b34ab4ef642a4ca1f2480d7f743d25539c832f3e0cc481db3ea8e01c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.6/android-studio-ide-201.6712195-linux.tar.gz">android-studio-ide-201.6712195-linux.tar.gz</a>
+                                </td>
+                                <td>912195799 bytes</td>
+                                <td>3031ebfa6ec6e1f968af07a98bd056c55db919ebe2118a850e2337f482b4342d</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.6/android-studio-ide-201.6712195-cros.deb">android-studio-ide-201.6712195-cros.deb</a>
+                                </td>
+                                <td>732930256 bytes</td>
+                                <td>d78e3061541ef61d63a6db097b12d002c2eb0ee71ab4dd186273399ecf53a88c</td>
+                            </tr>
                             <!-- 4.1 Beta 5 -->
                             <tr>
                                 <td rowspan="6">4.1 Beta 5</td>
@@ -377,7 +421,7 @@
                                 <td>Windows (64-bit)</td>
                                 <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.5/android-studio-ide-201.6682321-windows.zip">android-studio-ide-201.6682321-windows.zip</a>
                                 </td>
-                                <td> bytes</td>
+                                <td>936032757 bytes</td>
                                 <td>67be9af20a01b562e5fffe28838bc5d941130fa3264a6fcdb0489dd96b5c41d9</td>
                             </tr>
                             <tr>
