add android studio 4.2 canary 7 links

--- a/index.html
+++ b/index.html
@@ -316,6 +316,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 7 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 7</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.7/android-studio-ide-201.6720134-windows.exe">android-studio-ide-201.6720134-windows.exe</a>
+                                </td>
+                                <td>919473264 bytes</td>
+                                <td>9f70fe8089fe0d4d7a9143f105fe080442e986c2716d16faae411244735961ff</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1ghc9nu4p0kj30mu0b7wf0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-201.6720134-windows.zip">android-studio-ide-201.6720134-windows.zip</a>
+                                </td>
+                                <td>929401943 bytes</td>
+                                <td>ce971c2c09e0c842d3fbf0149ed9208d2e7815a1b93c79d42b967250eb1e5526</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-201.6720134-mac.zip">android-studio-ide-201.6720134-mac.zip</a>
+                                </td>
+                                <td>920814134 bytes</td>
+                                <td>7a66503bbb815ac653eb8efa736eff238f756cd88b753da9c8eb112ef635063c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-201.6720134-linux.tar.gz">android-studio-ide-201.6720134-linux.tar.gz</a>
+                                </td>
+                                <td>910351432 bytes</td>
+                                <td>df9e33c751b9e7227168a2a87a2062c72fec06cd85c6054fc626950f5a363ab1</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.7/android-studio-ide-201.6720134-cros.deb">android-studio-ide-201.6720134-cros.deb</a>
+                                </td>
+                                <td>732144880 bytes</td>
+                                <td>c516c68432525eae126c20b6fa7bd32fce77180072a871223b85ec61e6e765a2</td>
+                            </tr>
                             <!-- 4.2 Canary 6 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 6</td>
