--- a/index.html
+++ b/index.html
@@ -266,8 +266,11 @@
                         <a class="top-ads-link text-center" href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io" title="GitAds" onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io', 'GitAds', 'click');" target="_blank">
                             <span class="ads-text">广告</span><img src="https://images.gitads.io/AndroidDevTools">
                         </a>
-                        <a class="top-ads-link text-center" href="https://www.androidweekly.io" title="Android开发技术周报" onclick="trackOutboundLink('https://www.androidweekly.io', 'AndroidWeekly-top', 'click');" target="_blank">
+                        <a class="top-ads-link text-center hide" href="https://www.androidweekly.io" title="Android开发技术周报" onclick="trackOutboundLink('https://www.androidweekly.io', 'AndroidWeekly-top', 'click');" target="_blank">
                             <img class="top-ads-img" src="https://tva1.sinaimg.cn/large/007S8ZIlly1ggx7qxpfv5j30p00go75l.jpg">
+                        </a>
+                        <a class="top-ads-link text-center" href="https://jinshuju.net/f/fFoSzh?x_field_1=Androidkfjszk" title="应用市场AppGallery Connect 开发者沙龙" onclick="trackOutboundLink('https://jinshuju.net/f/fFoSzh?x_field_1=Androidkfjszk', 'AppGallery', 'click');" target="_blank">
+                            <img class="top-ads-img" src="https://tva1.sinaimg.cn/large/007S8ZIlly1ghmmaiq46xj31hc0u00u8.jpg">
                         </a>
                     </p>
                     <h1 id="introduction" class="content-title" algin="center">AndroidDevTools</h1>
