add android studio 4.1 rc1 links

--- a/index.html
+++ b/index.html
@@ -319,6 +319,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.1 Beta 5 -->
+                            <tr>
+                                <td rowspan="6">4.1 RC1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.16/android-studio-ide-201.6719854-windows.exe">android-studio-ide-201.6719854-windows.exe</a>
+                                </td>
+                                <td>940151368 bytes</td>
+                                <td>69abd37e5a9e3b3cc30881f33081939b1c31dab07f95bc225d81ff18773325c2</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1ghmmyuoc3xj30mo0b7wf0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.16/android-studio-ide-201.6719854-windows.zip">android-studio-ide-201.6719854-windows.zip</a>
+                                </td>
+                                <td>944291228 bytes</td>
+                                <td>b6621903710a18b1f0c2d60be4bb1beb0b4cdbf9f9e1d8135910c20cd3414094</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.16/android-studio-ide-201.6719854-mac.zip">android-studio-ide-201.6719854-mac.zip</a>
+                                </td>
+                                <td>919373175 bytes</td>
+                                <td>44d83f7c0f566806329ddbf229461993a8111206cf0bd2307ff88f101b8dcb8e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.16/android-studio-ide-201.6719854-linux.tar.gz">android-studio-ide-201.6719854-linux.tar.gz</a>
+                                </td>
+                                <td>925864008 bytes</td>
+                                <td>aff986d4bd9ed95a3998271de7cd4b835157843b97c1c6f95768827f83156762</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.16/android-studio-ide-201.6719854-cros.deb">android-studio-ide-201.6719854-cros.deb</a>
+                                </td>
+                                <td>779150872 bytes</td>
+                                <td>ab9e7a12b336706a3f425d76d51df9a132cfda069389bda8ef63596581e76193</td>
+                            </tr>
                             <!-- 4.2 Canary 7 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 7</td>
