add android studio 4.1 rc2 and 4.2 canary8 links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh_CN">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" type="image/x-icon" href="static/image/favicon.ico">
@@ -266,11 +265,8 @@
                         <a class="top-ads-link text-center" href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io" title="GitAds" onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io', 'GitAds', 'click');" target="_blank">
                             <span class="ads-text">广告</span><img src="https://images.gitads.io/AndroidDevTools">
                         </a>
-                        <a class="top-ads-link text-center hide" href="https://www.androidweekly.io" title="Android开发技术周报" onclick="trackOutboundLink('https://www.androidweekly.io', 'AndroidWeekly-top', 'click');" target="_blank">
+                        <a class="top-ads-link text-center" href="https://www.androidweekly.io" title="Android开发技术周报" onclick="trackOutboundLink('https://www.androidweekly.io', 'AndroidWeekly-top', 'click');" target="_blank">
                             <img class="top-ads-img" src="https://tva1.sinaimg.cn/large/007S8ZIlly1ggx7qxpfv5j30p00go75l.jpg">
-                        </a>
-                        <a class="top-ads-link text-center" href="https://jinshuju.net/f/fFoSzh?x_field_1=Androidkfjszk" title="应用市场AppGallery Connect 开发者沙龙" onclick="trackOutboundLink('https://jinshuju.net/f/fFoSzh?x_field_1=Androidkfjszk', 'AppGallery', 'click');" target="_blank">
-                            <img class="top-ads-img" src="https://tva1.sinaimg.cn/large/007S8ZIlly1ghmmaiq46xj31hc0u00u8.jpg">
                         </a>
                     </p>
                     <h1 id="introduction" class="content-title" algin="center">AndroidDevTools</h1>
@@ -319,6 +315,94 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.1 Beta 5 -->
+                            <tr>
+                                <td rowspan="6">4.1 RC2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.17/android-studio-ide-201.6776251-windows.exe">android-studio-ide-201.6776251-windows.exe</a>
+                                </td>
+                                <td>940460120 bytes</td>
+                                <td>9079babd69b32e8afc6cf8c7a30bc50de534d0d8f90e4cd7c200cfad6dabc266</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gibggcci6dj319u0m6mz7.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.17/android-studio-ide-201.6776251-windows.zip">android-studio-ide-201.6776251-windows.zip</a>
+                                </td>
+                                <td>944602007 bytes</td>
+                                <td>a0dc07d0916ecb5f2f5d4b399c607b2eb5ce654924f1f9528b648f5b20dfea8a</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.17/android-studio-ide-201.6776251-mac.zip">android-studio-ide-201.6776251-mac.zip</a>
+                                </td>
+                                <td>919681569 bytes</td>
+                                <td>0a6e66cfc28bef971aeddc09678c396c4db1af7cbc4859a453ed8e1dfd89ff9f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.17/android-studio-ide-201.6776251-linux.tar.gz">android-studio-ide-201.6776251-linux.tar.gz</a>
+                                </td>
+                                <td>926195592 bytes</td>
+                                <td>dd6f9e51c7df464ee56716ef7f75ff369e21930014a94e75b10d3ad5747b0dd7</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.17/android-studio-ide-201.6776251-cros.deb">android-studio-ide-201.6776251-cros.deb</a>
+                                </td>
+                                <td>779522240 bytes</td>
+                                <td>934995e3c40d65a7db134629c791aae20e992481a65d21866c47197bb78bdacc</td>
+                            </tr>
+                            <!-- 4.2 Canary 8 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 8</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.7/android-studio-ide-202.6787931-windows.exe">android-studio-ide-202.6787931-windows.exe</a>
+                                </td>
+                                <td>935909976 bytes</td>
+                                <td>2b21f349f62ef78c90f31763da218c2bb5dcdcd22a8a61c29189cb333c2e6482</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gibgc7yjhdj31a20medhx.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-202.6787931-windows.zip">android-studio-ide-202.6787931-windows.zip</a>
+                                </td>
+                                <td>945097170 bytes</td>
+                                <td>86b37933477d3fa51de7db58e3b364c9aa8dd9d2972c5e03ba1ef7d906a8448c</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-202.6787931-mac.zip">android-studio-ide-202.6787931-mac.zip</a>
+                                </td>
+                                <td>944083163 bytes</td>
+                                <td>d63be241c8fb279c4f4f1e30ffc6c840dd12995dd59905ae32d91ea1d646f715</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-202.6787931-linux.tar.gz">android-studio-ide-202.6787931-linux.tar.gz</a>
+                                </td>
+                                <td>953907026 bytes</td>
+                                <td>c2d862f0d6b2aff485e7ba21de18bbb955db60f5a1c115bceadfce2644feae78</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.7/android-studio-ide-202.6787931-cros.deb">android-studio-ide-202.6787931-cros.deb</a>
+                                </td>
+                                <td>812034580 bytes</td>
+                                <td>64f485dc7543290d268ac73f033bdda2d1fdde2fc0ed9bc2adb1b2cb8ed70e7d</td>
+                            </tr>
                             <!-- 4.1 Beta 5 -->
                             <tr>
                                 <td rowspan="6">4.1 RC1</td>
